--- a/stubs/resources/views/layout/header/_logo.antlers.html
+++ b/stubs/resources/views/layout/header/_logo.antlers.html
@@ -1,6 +1,4 @@
-<div class="flex justify-start">
-    <a href="{{ homepage }}" class="mr-10 text-lg font-medium text-gray-900">
-        {{ svg src="logo" class="w-20 h-12 sm:w-24 xl:w-28" aria-hidden="true" }}
-        <span class="sr-only">Homepage</span>
-    </a>
-</div>
+<a class="flex items-center justify-center" href="{{ homepage }}">
+    {{ svg src="logo" class="h-12 w-22 sm:w-24 xl:w-28" aria-hidden="true" }}
+    <span class="sr-only">Homepage</span>
+</a>
