--- a/stubs/resources/views/features/wishlist/_scripts.antlers.html
+++ b/stubs/resources/views/features/wishlist/_scripts.antlers.html
@@ -15,31 +15,57 @@
 
                         async getWishlist() {
                             try {
-                                const response = await gaia.fetch.url('/!/gaia/account/wishlists').get();
+                                const response = await fetch('/!/gaia/account/wishlists', {
+                                    method: 'GET',
+                                    headers: {
+                                        'Content-Type': 'application/json',
+                                        'X-Requested-With': 'XMLHttpRequest',
+                                        'X-CSRF-TOKEN': document.querySelector('meta[name="csrf-token"]').getAttribute('content')
+                                    }
+                                });
 
-                                if (response.reason == 'no_wishlist_data') return;
+                                const responseData = await response.json();
 
-                                this.wishlistData = response;
+                                if (responseData.reason == 'no_wishlist_data') {
+                                    this.createWishlist('default');
+                                    return
+                                }
+
+                                this.wishlistData = responseData;
 
                                 const collection = this.wishlistData.collections.find(item => item.id === 'default');
+
                                 this.activeCollectionLength = collection.items.length;
 
                                 window.dispatchEvent(new CustomEvent(`wishlist-data-ready`));
                             }
                             catch (error) {
+                                console.log('Error fetching wishlist data:', error);
+
                                 this.wishlistData = null;
                             }
                         },
 
                         async createWishlist(name) {
                             try {
-                                const response = await gaia.fetch.url('/!/gaia/account/wishlist/create').post({
-                                    name: name
+                                const response = await fetch('/!/gaia/account/wishlist/create', {
+                                    method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json',
+                                        'X-Requested-With': 'XMLHttpRequest',
+                                        'X-CSRF-TOKEN': document.querySelector('meta[name="csrf-token"]').getAttribute('content')
+                                    },
+                                    body: JSON.stringify({
+                                        name: 'Saved',
+                                        id: 'default'
+                                    })
                                 });
 
                                 this.getWishlist();
                             }
                             catch (error) {
+                                console.log('Error creating wishlist:', error);
+
                                 gaia.toast({
                                     text: `{{ "We couldn't add this product to your wishlist at this time" | trans }}`,
                                     type: `error`
@@ -52,18 +78,33 @@
                             }
                         },
 
-                        async addToWishlist(productId, collectionId) {
-                            collectionId = collectionId || this.wishlistId;
+                        async addToWishlist(productId) {
+                            let collectionId = 'default';
+
                             try {
-                                const response = await gaia.fetch.url('/!/gaia/account/wishlist/update').post({
-                                    product_id: productId,
-                                    wishlist_ids: ['default'],
+                                const response = await fetch('/!/gaia/account/wishlist/update', {
+                                    method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json',
+                                        'X-Requested-With': 'XMLHttpRequest',
+                                        'X-CSRF-TOKEN': document.querySelector('meta[name="csrf-token"]').getAttribute('content')
+                                    },
+                                    body: JSON.stringify({
+                                        product_id: productId,
+                                        wishlist_ids: ['default'],
+                                    })
                                 });
 
                                 this.wishlistData.collections.find(item => item.id == collectionId).items.push(productId);
+
+                                gaia.toast({
+                                    text: `{{ "Added product to wishlist" | trans }}`,
+                                    type: `success`
+                                });
                             }
                             catch (error) {
-                                console.log(error);
+                                console.log('Error adding to wishlist:', error);
+
                                 gaia.toast({
                                     text: `{{ "We couldn't add this product to your wishlist at this time" | trans }}`,
                                     type: `error`
@@ -78,17 +119,28 @@
                             }
                         },
 
-                        async removeFromWishlist(productId, collectionId) {
-                            collectionId = collectionId || this.wishlistId;
+                        async removeFromWishlist(productId) {
+                            let collectionId = 'default';
+
                             try {
-                                const response = await gaia.fetch.url('/!/gaia/account/wishlist/removeItem').post({
-                                    product_id: productId,
-                                    wishlist_ids: ['default'],
+                                const response = await fetch('/!/gaia/account/wishlist/removeItem', {
+                                    method: 'POST',
+                                    headers: {
+                                        'Content-Type': 'application/json',
+                                        'X-Requested-With': 'XMLHttpRequest',
+                                        'X-CSRF-TOKEN': document.querySelector('meta[name="csrf-token"]').getAttribute('content')
+                                    },
+                                    body: JSON.stringify({
+                                        product_id: productId,
+                                        wishlist_ids: ['default'],
+                                    })
                                 });
 
                                 this.wishlistData.collections.find(item => item.id == collectionId).items.splice(this.wishlistData.collections.find(item => item.id == collectionId).items.indexOf(productId), 1);
                             }
                             catch (error) {
+                                console.log('Error removing from wishlist:', error);
+
                                 gaia.toast({
                                     text: `{{ "We couldn't remove this product from your wishlist at this time" | trans }}`,
                                     type: `error`
@@ -107,30 +159,9 @@
                             return this.wishlist.items.includes(productId)
                         },
 
-                        isProductInCollection(collectionId, productId) {
-                            return this.wishlistData?.collections.find(item => item.id == collectionId).items.includes(productId)
-                        },
-
-                        get numberOfWishlistCollections() {
-                            return this.wishlistData?.collections.length;
-                        },
-
-                        get numberOfProductsInWishlist() {
-                            return this.wishlist.items.length;
-                        },
-
-                        get wishlistId() {
-                            return this.wishlist.id;
-                        },
-
                         get wishlist() {
                             return this.wishlistData.collections[0];
                         },
-
-                        get hasWishlistData() {
-                            return this.wishlistData == null ? false : true;
-
-                        }
                     });
                 })
             </script>
