--- a/stubs/resources/views/shop/product/default/_gallery.antlers.html
+++ b/stubs/resources/views/shop/product/default/_gallery.antlers.html
@@ -55,21 +55,18 @@
             x-show="open"
             x-trap.inert.noscroll="open"
             x-cloak
-            class="fixed inset-0 z-20 flex items-center justify-center h-screen select-none w-dvw content-visibility-auto"
+            class="fixed inset-0 z-20 flex items-center justify-center h-screen bg-black select-none w-dvw content-visibility-auto"
             aria-modal="true"
             role="dialog"
             @keydown.escape.window="closeLightbox()"
+            x-transition:enter="ease-out duration-200"
+            x-transition:enter-start="opacity-0"
+            x-transition:enter-end="opacity-100"
+            x-transition:leave="ease-in duration-200"
+            x-transition:leave-start="opacity-100"
+            x-transition:leave-end="opacity-0"
         >
-            <div
-                class="relative z-20 flex flex-col justify-center bg-black lg:p-12 size-full"
-                x-show="open"
-                x-transition:enter="transition ease-out duration-300"
-                x-transition:enter-start="opacity-0 transform scale-95 translate-y-10"
-                x-transition:enter-end="opacity-100 transform scale-100 translate-y-0"
-                x-transition:leave="transition ease-in duration-150"
-                x-transition:leave-start="opacity-100 transform scale-100"
-                x-transition:leave-end="opacity-0 transform scale-95"
-            >
+            <div class="relative z-20 flex flex-col justify-center lg:p-12 size-full">
 
                 <x-button label="Close" icon="close" variant="secondary" @click="closeLightbox()" class="absolute z-30 btn-round top-5 right-5" />
 
@@ -121,18 +118,7 @@
                     </div>
                 {{ /if }}
             </div>
-
-            <div
-                class="absolute inset-0 z-10 size-full bg-slate-800/60"
-                x-show="open"
-                @click="toggleLightbox()"
-                x-transition:enter="ease-out duration-200"
-                x-transition:enter-start="opacity-0"
-                x-transition:enter-end="opacity-100"
-                x-transition:leave="ease-in duration-200"
-                x-transition:leave-start="opacity-100"
-                x-transition:leave-end="opacity-0"
-            ></div>
+            <div class="absolute inset-0 size-full" @click="closeLightbox()"></div>
         </div>
     </div>
 {{ /cache }}
