--- a/stubs/resources/views/shop/product/default/_gallery.antlers.html
+++ b/stubs/resources/views/shop/product/default/_gallery.antlers.html
@@ -1,139 +1,103 @@
-{{ cache scope="page" for="5 days" }}
-    {{ slider_id = {gaia:uuid} }}
-    {{ lightbox_id = {gaia:uuid} }}
+{{ $slider_id = {gaia:uuid} }}
+{{ $lightbox_id = {gaia:uuid} }}
 
-    <div class="relative" x-data="gallery()" x-defer>
-        <div class="swiper aspect-square md:rounded-md" data-swiper-slider="{{ slider_id }}">
-            <div class="max-w-full swiper-wrapper">
-                {{ gallery }}
-                    <div class="max-w-full overflow-hidden swiper-slide cursor-grab" @click="toggleLightbox()" data-index="{{ index }}" data-image="{{ path }}">
-                        <div class="swiper-zoom-container" >
-                            <x-picture 
-                                :src="url" 
-                                :alt="alt"
-                                lazy="false" 
-                                size.default.width="480" 
-                                size.default.height="480"
-                                size.xs.width="600" 
-                                size.xs.height="600"
-                                size.sm.width="800" 
-                                size.sm.height="800"
-                                lazy="{{ index == 0 ? 'false' : 'true' }}"
-                            >
-                                <x-slot:picture class="size-full" />
-                                <x-slot:img fetchpriority="{{ index == 0 ? 'high' : 'low' }}" class="size-full" />
-                            </x-picture>
-                        </div>
+<div class="relative" x-data="gallery()" x-defer>
+    <div class="swiper aspect-square md:rounded-md" data-swiper-slider="{{ slider_id }}">
+        <div class="max-w-full swiper-wrapper">
+            {{ gallery }}
+                <div class="max-w-full overflow-hidden swiper-slide cursor-grab" @click="openLightbox()" data-index="{{ index }}" data-image="{{ path }}">
+                    <div class="swiper-zoom-container" >
+                        <x-picture 
+                            :src="url" 
+                            :alt="alt"
+                            lazy="false" 
+                            size.default.width="480" 
+                            size.default.height="480"
+                            size.xs.width="600" 
+                            size.xs.height="600"
+                            size.sm.width="800" 
+                            size.sm.height="800"
+                            lazy="{{ index == 0 ? 'false' : 'true' }}"
+                        >
+                            <x-slot:picture class="size-full" />
+                            <x-slot:img fetchpriority="{{ index == 0 ? 'high' : 'low' }}" class="size-full" />
+                        </x-picture>
                     </div>
-                {{ /gallery }}
-            </div>
+                </div>
+            {{ /gallery }}
         </div>
+        <x-button label="Open in full" variant="secondary" icon="open_in_full" class="absolute z-10 hidden top-4 right-4 md:inline-flex btn-round btn-sm" @click="openLightbox()" />
+    </div>
+    <div class="relative bottom-0 top-auto opacity-30 swiper-pagination md:hidden" data-swiper-pagination="{{ $slider_id }}"></div>
 
-        {{ if {gallery | length} > 1 }}
-            <div class="flex items-center justify-center h-10 sm:px-10 md:hidden">
-                <div class="select-none swiper-scrollbar swiper-scrollbar-horizontal" data-swiper-scrollbar="{{ slider_id }}"></div>
-            </div>
+    {{ if {gallery | length} > 1 }}
+        <div class="hidden grid-cols-6 gap-4 mt-4 md:grid">
+            {{ gallery }}
+                <button
+                    type="button"
+                    @mouseover="goToIndex({{ index }})"
+                    @click="goToIndex({{ index }})"
+                    class="overflow-hidden transition cursor-pointer rounded-xs hover:ring-2 ring-offset-2 ring-slate-500 aspect-square"
+                    :class="{ 'ring-2': activeIndex === {{ index }} }"
+                >
+                    <x-picture :src="url" :alt="alt" size.default.width="200" size.default.height="200" />
+                </button>
+            {{ /gallery }}
+        </div>
+    {{ /if }}
 
-            <div class="hidden grid-cols-6 gap-4 mt-4 md:grid">
-                {{ gallery }}
-                    <button
-                        type="button"
-                        @mouseover="goToIndex({{ index }})"
-                        @click="goToIndex({{ index }})"
-                        class="overflow-hidden transition cursor-pointer rounded-xs hover:ring-2 ring-offset-2 ring-slate-500 aspect-square"
-                        :class="{ 'ring-2': activeIndex === {{ index }} }"
-                    >
-                        <x-picture :src="url" :alt="alt" size.default.width="200" size.default.height="200" />
-                    </button>
-                {{ /gallery }}
-            </div>
-        {{ /if }}
-
-        <x-button label="Open in full" variant="secondary" icon="open_in_full" class="absolute z-10 hidden top-4 right-4 md:inline-flex btn-round btn-sm" @click="toggleLightbox()" />
-
-        <div
-            x-show="open"
-            x-trap.inert.noscroll="open"
-            x-cloak
-            class="fixed inset-0 z-20 flex items-center justify-center h-screen bg-black select-none w-dvw content-visibility-auto"
-            aria-modal="true"
-            role="dialog"
-            @keydown.escape.window="closeLightbox()"
-            x-transition:enter="ease-out duration-200"
-            x-transition:enter-start="opacity-0"
-            x-transition:enter-end="opacity-100"
-            x-transition:leave="ease-in duration-200"
-            x-transition:leave-start="opacity-100"
-            x-transition:leave-end="opacity-0"
-        >
-            <div class="relative z-20 flex flex-col justify-center lg:p-12 size-full">
-
-                <x-button label="Close" icon="close" variant="secondary" @click="closeLightbox()" class="absolute z-30 btn-round top-5 right-5" />
-
-                <div class="flex flex-col flex-wrap w-full grow xl:pl-10 swiper">
-                    <div class="flex justify-center w-full h-full grow">
-                        <div class="swiper aspect-square" data-swiper-slider="{{ lightbox_id }}">
-                            <div class="swiper-wrapper">
-                                {{ gallery }}
-                                    <div class="swiper-slide cursor-grab">
-                                        <div class="swiper-zoom-container">
-                                            <x-picture 
-                                                :src="url" 
-                                                size.default.width="1200" 
-                                                size.default.height="1200"
-                                            />
-                                            <div class="swiper-lazy-preloader"></div>
-                                        </div>
-                                    </div>
-                                {{ /gallery }}
+    <div
+        x-show="open"
+        x-trap.inert.noscroll="open"
+        x-cloak
+        class="fixed inset-0 z-20 flex items-center justify-center h-screen bg-black select-none w-dvw content-visibility-auto"
+        aria-modal="true"
+        role="dialog"
+        @keydown.escape.window="closeLightbox()"
+        x-transition:enter="ease-out duration-200"
+        x-transition:enter-start="opacity-0"
+        x-transition:enter-end="opacity-100"
+        x-transition:leave="ease-in duration-100"
+        x-transition:leave-start="opacity-100"
+        x-transition:leave-end="opacity-0"
+    >
+        <div class="relative z-20 flex flex-col justify-center lg:py-20 size-full">
+            <div class="size-full swiper" data-swiper-slider="{{ $lightbox_id }}">
+                <div class="swiper-wrapper">
+                    {{ gallery }}
+                        <div class="overflow-hidden swiper-slide cursor-grab">
+                            <div class="swiper-zoom-container">
+                                <x-picture :src="url" size.default.width="{{ width }}" size.default.height="{{ height }}">
+                                    <x-slot:picture class="h-full" />
+                                    <x-slot:img class="object-contain size-full" />
+                                </x-picture>
+                                <div class="swiper-lazy-preloader [--swiper-preloader-color:var(--color-slate-400)]"></div>
                             </div>
                         </div>
-                    </div>
-                    {{ if {gallery | length} > 1 }}
-                        <div class="fixed z-10 flex items-center justify-center w-full h-10 bg-black lg:hidden bottom-10 mix-blend-difference px-gutter">
-                            <div class="swiper-scrollbar swiper-scrollbar-inverted swiper-scrollbar-horizontal" data-swiper-scrollbar="{{ lightbox_id }}"></div>
-                        </div>
-                    {{ /if }}
+                    {{ /gallery }}
                 </div>
-
-                {{ if {gallery | length} > 1}}
-                    <div class="flex-row flex-wrap justify-center hidden gap-2 mt-10 lg:flex">
-                        {{ gallery }}
-                            <button
-                                @click.stop="goToIndex({{ index }})"
-                                class="overflow-hidden transition cursor-pointer rounded-xs hover:ring-2 ring-offset-2 ring-slate-500 aspect-square max-w-12 xl:max-w-24"
-                                :class="{ 'ring-2': activeIndex == {{ index }} }"
-                            >
-                                <x-picture 
-                                    :src="url" 
-                                    :alt="alt"
-                                    size.default.width="48" 
-                                    size.default.height="48"
-                                >
-                                    <x-slot:picture class="overflow-hidden aspect-square" />
-                                    <x-slot:img class="aspect-square" />
-                                </x-picture>
-                            </button>
-                        {{ /gallery }}
-                    </div>
-                {{ /if }}
             </div>
-            <div class="absolute inset-0 size-full" @click="closeLightbox()"></div>
+            <div class="swiper-pagination top-auto bottom-0 py-7 font-bold [--swiper-pagination-fraction-color:var(--color-slate-400)]" data-swiper-pagination="{{ $lightbox_id }}"></div>
+            <button type="button" class="opacity-0 swiper-button-next btn btn-secondary btn-round btn-lg after:hidden lg:opacity-100" data-swiper-next="{{ $lightbox_id }}">
+                {{ svg src="arrow_right_alt" class="size-6" }}
+            </button>
+            <button type="button" class="opacity-0 swiper-button-prev btn btn-secondary btn-round btn-lg after:hidden lg:opacity-100" data-swiper-prev="{{ $lightbox_id }}">
+                {{ svg src="arrow_left_alt" class="size-6" }}
+            </button>
+            <x-button label="Close" icon="close" variant="secondary" @click="closeLightbox()" class="absolute z-30 btn-round top-5 right-5"/>
         </div>
     </div>
-{{ /cache }}
+</div>
 
 {{ once }}
     {{ push:scripts }}
         <script type="module">
             Alpine.data('gallery', () => ({
                 open: false,
-                galleryLength: {{ gallery | length }},
+                galleryLength: JSON.parse('{{ gallery | length }}'),
                 gallerySwiper: null,
                 lightboxSwiper: null,
                 activeIndex: 0,
-                isGalleryZoomed: false,
-                isLightboxZoomed: false,
 
                 init() {
                     window.addEventListener('product-data-reloaded', () => {
@@ -151,95 +115,50 @@
                 },
 
                 initGallery() {
-
                     if (this.galleryLength === 1) {
                         return;
                     }
 
-                    this.gallerySwiper = new Swiper('[data-swiper-slider="{{ slider_id }}"]', {
-                        zoom: true,
-                        loop: false,
-                        slidesPerView: 'auto',
-                        spaceBetween: 0,
-                        breakpoints: {
-                            768: {
-                                slidesPerView: 1,
-                                spaceBetween: 1,
-                                loop: true,
-                                slidesOffsetBefore: 0,
-                                slidesOffsetAfter: 0,
-                            }
-                        },
-                        scrollbar: {
-                            el: '[data-swiper-scrollbar="{{ slider_id }}"]',
-                            draggable: true,
+                    this.gallerySwiper = new Swiper('[data-swiper-slider="{{ $slider_id }}"]', {
+                        pagination: {
+                            el: '[data-swiper-pagination="{{ $slider_id }}"]',
+                            type: "progressbar",
                         },
                     });
 
-                    this.gallerySwiper.on('navigationPrev', () => {
-                        this.gallerySwiper.allowSlidePrev = true;
-                        this.gallerySwiper.slidePrev();
-                        this.gallerySwiper.zoom.out();
-                    });
-
-                    this.gallerySwiper.on('navigationNext', () => {
-                        this.gallerySwiper.allowSlideNext = true;
-                        this.gallerySwiper.slideNext();
-                    });
-
-                    this.gallerySwiper.on('activeIndexChange', () => {
+                    // Update active index for the thumnails & so the gallery and lightbox 
+                    // can always be on the same slide. 
+                    this.gallerySwiper.on('slideChange', () => {
                         this.activeIndex = this.gallerySwiper.realIndex;
-
-                        if (this.lightboxSwiper) {
-                            this.lightboxSwiper.slideTo(this.activeIndex, 0);
-                        }
                     });
-
-                    this.gallerySwiper.on('zoomChange', (e) => {
-                        this.isGalleryZoomed = !this.isGalleryZoomed;
-                        this.gallerySwiper.allowSlideNext = !this.isGalleryZoomed ? true: false;
-                        this.gallerySwiper.allowSlidePrev = !this.isGalleryZoomed ? true: false;
-                    });
-
                 },
                 
                 initLightbox() {
-                    this.lightboxSwiper = new Swiper('[data-swiper-slider="{{ lightbox_id }}"]', {
-                        zoom: true,
+                    this.lightboxSwiper = new Swiper('[data-swiper-slider="{{ $lightbox_id }}"]', {
+                        zoom: {
+                            limitToOriginalSize: true,
+                            minRatio: 0.1,
+                        },
                         navigation: {
-                            prevEl: '[data-swiper-prev="{{ lightbox_id }}"]',
-                            nextEl: '[data-swiper-next="{{ lightbox_id }}"]',
+                            prevEl: '[data-swiper-prev="{{ $lightbox_id }}"]',
+                            nextEl: '[data-swiper-next="{{ $lightbox_id }}"]',
                         },
-                        scrollbar: {
-                            el: '[data-swiper-scrollbar="{{ lightbox_id }}"]',
-                            draggable: true,
+                        pagination: {
+                            el: '[data-swiper-pagination="{{ $lightbox_id }}"]',
+                            type: "fraction",
                         },
                     });
 
-                    this.lightboxSwiper.on('activeIndexChange', () => {
+                    // Update active index so the gallery and lightbox 
+                    // can always be on the same slide. 
+                    this.lightboxSwiper.on('slideChange', () => {
                         this.activeIndex = this.lightboxSwiper.realIndex;
-
-                        if (this.gallerySwiper && this.open) {
-                            this.gallerySwiper.slideTo(this.activeIndex, 0);
-                        }
                     });
-
-                    this.lightboxSwiper.on('zoomChange', (e) => {
-                        this.isLightboxZoomed = !this.isLightboxZoomed;
-                        this.lightboxSwiper.allowSlideNext = !this.isLightboxZoomed ? true: false;
-                        this.lightboxSwiper.allowSlidePrev = !this.isLightboxZoomed ? true: false;
-                    });
-                },
-
-                onSlideClick() {
-                    this.toggleLightbox();
-                },
-
-                toggleZoom(direction) {
-                    this.gallerySwiper.zoom.toggle();
                 },
 
                 closeLightbox() {
+                    this.gallerySwiper.slideTo(this.activeIndex, 0);
+
                     this.open = false;
 
                     if (this.gallerySwiper) {
@@ -249,12 +168,10 @@
                     }
                 },
 
-                toggleLightbox() {
-                    if (! this.open && this.gallerySwiper) {
-                        this.lightboxSwiper.slideTo(this.gallerySwiper.realIndex, 0);
-                    }
+                openLightbox() {
+                    this.lightboxSwiper.slideTo(this.activeIndex, 0);
 
-                    this.open = ! this.open;
+                    this.open = true;
                 },
                 
                 goToIndex(index) {
