--- a/stubs/resources/views/features/minicart/_totals.antlers.html
+++ b/stubs/resources/views/features/minicart/_totals.antlers.html
@@ -1,6 +1,6 @@
-<div class="pt-6 pb-6">
-    <div class="flex justify-between">
-        <p class="text-xl text-black">Subtotal:</p>
-        <p class="text-xl">{{ gaia:currency :price="totals.total.amount" }}</p>
+<div class="pb-6">
+    <div class="flex justify-between text-lg">
+        <p>Subtotal:</p>
+        <p>{{ gaia:currency :price="totals.total.amount" }}</p>
     </div>
 </div>
