--- a/stubs/resources/views/features/minicart/minicart.antlers.html
+++ b/stubs/resources/views/features/minicart/minicart.antlers.html
@@ -6,23 +6,28 @@
 #}}
 <div>
     <x-drawer name="minicart" heading="Your Basket" wire:ignore.self>
-        <x-drawer.section class="h-full pt-10">
-            <div wire:loading.flex>
-                <x-loader overlay/>
-            </div>
+        <div class="flex flex-col h-full">
+            <x-drawer.section class="py-10">
+                <div wire:loading.flex>
+                    <x-loader overlay/>
+                </div>
 
-            {{ partial:features/minicart/products }}
-        </x-drawer.section>
+                {{ partial:features/minicart/products }}
+            </x-drawer.section>
+
+            <x-drawer.section class="py-5 mt-auto border-y border-y-slate-100">
+                {{ partial:features/minicart/discount/form }}
+                {{ partial:features/minicart/discount/codes }}
+            </x-drawer.section>
+        </div>
 
         <x-slot:footer>
             <x-drawer.section>
                 {{ unless cart_empty }}
                     <div class="py-5">
-                        {{ partial:features/minicart/discount_form }}
-                        {{ partial:features/minicart/discount_codes }}
                         {{ partial:features/minicart/totals }}
 
-                        <x-button href="{{ checkoutUrl }}" @click="open = false" wire:loading.attr="disabled" class="w-full btn-lg">
+                        <x-button href="{{ checkoutUrl }}" @click="open = false" wire:loading.attr="disabled" class="w-full md:btn-lg">
                             Continue to checkout
                         </x-button>
                     </div>
@@ -31,31 +36,3 @@
         </x-slot:footer>
     </x-drawer>
 </div>
-
-{{ livewire:script }}
-    <script>
-        Alpine.data('minicartQty', (qty) => ({
-            quantity: qty,
-            debounceTimer: null,
-            debounceDelay: 600,
-            init() {
-
-            },
-            get size() {
-                return this.quantity?.toString().length || 1;
-            },
-            updateQuantity(newQuantity) {
-                if (! Number.isInteger(newQuantity)) {
-                    newQuantity = 1;
-                }
-    
-                this.quantity = newQuantity;
-    
-                clearTimeout(this.debounceTimer);
-                this.debounceTimer = setTimeout(() => {
-                    $wire.dispatch('update-cart-item-quantity', { lineId: '{{ line:id }}', quantity: newQuantity });
-                }, this.debounceDelay);
-            }
-        }));
-    </script>
-{{ /livewire:script }}
