--- a/stubs/resources/views/features/livesearch/_product.antlers.html
+++ b/stubs/resources/views/features/livesearch/_product.antlers.html
@@ -7,7 +7,7 @@
         {{ /if }}
 
         <div class="flex flex-col justify-center ml-2 sm:ml-5">
-            <h3 class=""><a href="{{ url }}" class="stretched-link">{{ title }}</a></h3>
+            <h3><a href="{{ url }}" class="stretched-link">{{ title }}</a></h3>
 
             {{ gaia:product:price }}
                 <div class="flex items-center gap-2 text-sm mt-2">
