--- a/stubs/resources/views/features/livesearch/_product.antlers.html
+++ b/stubs/resources/views/features/livesearch/_product.antlers.html
@@ -6,7 +6,7 @@
             </x-picture>
         {{ /if }}
 
-        <div class="flex flex-col justify-center ml-2 sm:ml-5">
+        <div class="flex flex-col mt-2 ml-2 sm:ml-5">
             <h3><a href="{{ url }}" class="stretched-link">{{ title }}</a></h3>
 
             {{ gaia:product:price }}
