--- a/stubs/resources/views/layout/navigation/desktop/blocks/_link_group.antlers.html
+++ b/stubs/resources/views/layout/navigation/desktop/blocks/_link_group.antlers.html
@@ -1,8 +1,8 @@
 
-{{ show_title = links_group_hide_title == 'nowhere' or links_group_hide_title == 'mobile' or (!links_group_hide_title)  }}
+{{ $show_title = links_group_hide_title == 'nowhere' or links_group_hide_title == 'mobile' or (!links_group_hide_title)  }}
 
 <ul>
-    {{ if show_title }}
+    {{ if $show_title }}
         <li>
             <h3 class="mb-2 text-sm font-medium text-black">
                 {{ links_group_title }}
@@ -10,23 +10,9 @@
         
             <ul>
                 {{ partial:layout/navigation/desktop/children data-type="{data-type}-linkgroup" }}
-                {{ if url }}
-                    <li>
-                        <a href="{{ url }}" class="nav-link">
-                            Shop All {{ title }}
-                        </a>
-                    </li>
-                {{ /if }}
             </ul>
         </li>
     {{ else }}
         {{ partial:layout/navigation/desktop/children data-type="{data-type}-linkgroup" }}
-        {{ if url }}
-            <li>
-                <a href="{{ url }}" class="nav-link">
-                    Shop All {{ title }}
-                </a>
-            </li>
-        {{ /if }}
     {{ /if }}    
 </ul>
