Inputs will no longer have close button on chrome

--- a/stubs/resources/css/forms.css
+++ b/stubs/resources/css/forms.css
@@ -47,6 +47,13 @@
 		padding-top: 0;
 		padding-bottom: 0;
 	}
+
+	::-webkit-search-decoration,
+	::-webkit-search-cancel-button,
+	::-webkit-search-results-button,
+	::-webkit-search-results-decoration { 
+		display: none; 
+	}
 }
 
 @layer components {
